	PR middle-end/19583 	* gimple-low.c (try_catch_may_fallthru): New static function. 	(block_may_fallthru): Handle TRY_CATCH_EXPR. 	* tree-inline.c (expand_call_inline): Don't warn about reaching 	the end of a non-void function being inlined if the function uses 	a return slot.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94323 138bc75d-0d04-0410-961f-82ee72b054a4