gcc/gimple-low.c
@@ -263,6 +263,53 @@ lower_bind_expr (tree_stmt_iterator *tsi, struct lower_data *data)
   tsi_delink (tsi);
 }
 
+/* Try to determine whether a TRY_CATCH expression can fall through.
+   This is a subroutine of block_may_fallthru.  */
+
+static bool
+try_catch_may_fallthru (tree stmt)
+{
+  tree_stmt_iterator i;
+
+  /* If the TRY block can fall through, the whole TRY_CATCH can
+     fall through.  */
+  if (block_may_fallthru (TREE_OPERAND (stmt, 0)))
+    return true;
+
+  i = tsi_start (TREE_OPERAND (stmt, 1));
+  switch (TREE_CODE (tsi_stmt (i)))
+    {
+    case CATCH_EXPR:
+      /* We expect to see a sequence of CATCH_EXPR trees, each with a
+	 catch expression and a body.  The whole TRY_CATCH may fall
+	 through iff any of the catch bodies falls through.  */
+      for (; !tsi_end_p (i); tsi_next (&i))
+	{
+	  if (block_may_fallthru (CATCH_BODY (tsi_stmt (i))))
+	    return true;
+	}
+      return false;
+
+    case EH_FILTER_EXPR:
+      /* If the exception does not match EH_FILTER_TYPES, we will
+	 execute EH_FILTER_FAILURE, and we will fall through if that
+	 falls through.  If the exception does match EH_FILTER_TYPES,
+	 we will fall through.  We don't know which exceptions may be
+	 generated, so we just check for EH_FILTER_TYPES being NULL,
+	 in which case we know that that the exception does not
+	 match.  */
+      return (EH_FILTER_TYPES (tsi_stmt (i)) != NULL
+	      || block_may_fallthru (EH_FILTER_FAILURE (tsi_stmt (i))));
+
+    default:
+      /* This case represents statements to be executed when an
+	 exception occurs.  Those statements are implicitly followed
+	 by a RESX_EXPR to resume execution after the exception.  So
+	 in this case the TRY_CATCH never falls through.  */
+      return false;
+    }
+}
+
 /* Try to determine if we can fall out of the bottom of BLOCK.  This guess
    need not be 100% accurate; simply be conservative and return true if we
    don't know.  This is used only to avoid stupidly generating extra code.
@@ -296,6 +343,9 @@ block_may_fallthru (tree block)
 
     case BIND_EXPR:
       return block_may_fallthru (BIND_EXPR_BODY (stmt));
+
+    case TRY_CATCH_EXPR:
+      return try_catch_may_fallthru (stmt);
 
     case TRY_FINALLY_EXPR:
       return block_may_fallthru (TREE_OPERAND (stmt, 1));
